--- a/style.css
+++ b/style.css
@@ -19,10 +19,15 @@
     margin-bottom: 10px;
 }
 
-/* #vago {
-    height: 82vh;
-    overflow-y: scroll;
-}  */
+.accordion .inactivo {
+    display: none;
+}
+
+.accordion .activos {
+    display: inline-block;
+}
+
+
 
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
@@ -65,7 +70,7 @@ body {
 
 .info-wraper {
     margin: auto;
-    width: 70%;
+    width: 80%;
     background: var(--clr-bg);
     border-radius: 15px;
     margin-bottom: 2rem;
@@ -114,7 +119,7 @@ label {
 
 .select-wraper {
     margin: auto;
-    width: 70%;
+    width: 80%;
     background: var(--clr-bg);
     border-radius: 15px;
     box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.15);
@@ -196,7 +201,7 @@ a {
 .date-wraper {
     font-size: 1.4rem;
     margin: auto;
-    width: 70%;
+    width: 80%;
     background: var(--clr-bg);
     border-radius: 15px;
     box-shadow: 0px 0px 15px 2px rgba(0, 0, 0, 0.15);
