--- a/style.css
+++ b/style.css
@@ -19,15 +19,13 @@
     margin-bottom: 10px;
 }
 
-.accordion .inactivo {
+.date-wraper .inactivo {
     display: none;
 }
 
-.accordion .activos {
+.date-wraper .activos {
     display: inline-block;
 }
-
-
 
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
@@ -229,7 +227,7 @@ a {
     margin: auto;
     margin-bottom: 1.5rem;
     margin-top: 15px;
-    border: 1px solid ;
+    border: 1px solid;
 }
 
 .copiar-boton {
@@ -249,4 +247,112 @@ a {
     height: 30ch;
     border-radius: 15px;
     overflow: scroll;
+    overflow-x: hidden;
+}
+
+/* Estilos para pantallas mayores a 768 pixeles */
+
+@media (min-width: 768px) {
+    .wraper {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        gap: 0px 0px;
+        grid-template-areas:
+            "info-wraper select-wraper"
+            "date-wraper date-wraper";
+    }
+
+    .info-wraper {
+        grid-area: info-wraper;
+        min-height: 93.1ch;
+        margin-bottom: 0;
+        margin-right: 1em;
+    }
+
+    .part {
+        font-size: 2.3rem;
+    }
+
+    .info-wraper .form-label {
+        font-size: 2rem;
+    }
+
+    .info-wraper .input {
+        font-size: 1.5rem;
+    }
+
+    .select-wraper {
+        grid-area: select-wraper;
+        margin-bottom: 0;
+        margin-left: 1em;
+    }
+
+    .select-wraper label {
+        width: 50%;
+    }
+
+    .select-wraper .form-check-label {
+        font-size: 2rem;
+    }
+
+    .select-wraper .input-value {
+        font-size: 1.4rem;
+    }
+
+    .select-wraper .form-check-input {
+        font-size: 2rem;
+    }
+
+    .select-wraper .select-day-wraper {
+        margin-bottom: .4em;
+    }
+
+    .select-day-wraper .form-check-label {
+        margin-top: .5em;
+    }
+
+    .select-day-wraper .dia {
+        height: 2rem;
+    }
+
+    .btn-wraper {
+        width: 65%;
+        font-size: 1.6rem;
+    }
+
+    .btn-wraper .btn {
+        margin-bottom: .85em;
+    }
+
+    .date-wraper {
+        grid-area: date-wraper;
+        width: 84%;
+        min-height: 42rem;
+        margin-top: 1em;
+    }
+}
+
+/* Estilos para pantallas mayores a 1024px pixeles */
+
+@media (min-width: 1024px) {
+    .wraper {
+        display: flex;
+    }
+
+    .info-wraper {
+        min-height: 80vh;
+        margin-left: 3em;
+    }
+
+    .select-wraper {
+        min-height: 80vh;
+        margin-right: .8em;
+    }
+
+    .date-wraper {
+        min-height: 80vh;
+        margin-left: .8em;
+        margin-right: 2.2em;
+    }
 }
