Arreglado el error de que no aperece la informacion del curso

--- a/style.css
+++ b/style.css
@@ -19,11 +19,11 @@
     margin-bottom: 10px;
 }
 
-.date-wraper .inactivo {
+.info .inactivo {
     display: none;
 }
 
-.date-wraper .activos {
+.info .activos {
     display: inline-block;
 }
 
