--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 /* Estilos para mostrar y ocultar elementos mientrar sea necesario */
 
-.excluir {
+.info__excluir {
     display: none;
 }
 
@@ -9,11 +9,11 @@
     margin-bottom: 10px;
 }
 
-.info .inactivo {
+.informacion .inactivo {
     display: none;
 }
 
-.info .activos {
+.informacion .activos {
     display: inline-block;
 }
 
@@ -54,7 +54,7 @@ body {
 
 /* Estilos para los titulos de diferentes divisiones */
 
-.part {
+.section__title {
     background: var(--clr-main);
     color: white;
     border-radius: 15px 15px 0 0;
@@ -78,7 +78,7 @@ a {
 
 /* Estilos para el primer div (informacion del curso) */
 
-.info-wraper {
+.info {
     margin: auto;
     width: 80%;
     background: var(--clr-bg);
@@ -93,24 +93,24 @@ label {
 
 /* Estilos para los inputs */
 
-.info-wraper input:not([type='checkbox']):not([type='text']) {
+.info input:not([type='checkbox']):not([type='text']) {
     width: 15rem;
     display: block;
     margin: auto;
 }
 
-.info-wraper input:not([type='checkbox']):enabled {
+.info input:not([type='checkbox']):enabled {
     outline: none;
     background: white;
     width: 15rem;
     border: 1.3px solid rgba(0, 0, 0, 0.15);
 }
 
-.info-wraper input:not([type='checkbox']):focus {
+.info input:not([type='checkbox']):focus {
     box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.15);
 }
 
-.excDiv {
+.info__excluir_dias {
     width: 8rem;
     margin: auto;
     line-height: 1;
@@ -119,7 +119,7 @@ label {
 
 /* Estilos para el segundo div (Selección de dias) */
 
-.select-wraper {
+.select {
     margin: auto;
     width: 80%;
     background: var(--clr-bg);
@@ -129,7 +129,7 @@ label {
     margin-bottom: 2rem;
 }
 
-.select-wraper h3 {
+.select h3 {
     text-align: center;
     margin-bottom: 2rem;
 }
@@ -138,33 +138,33 @@ label {
     background: var(--clr-main);
 }
 
-.select-wraper label {
+.select label {
     width: 45%;
     margin-bottom: 1.3rem;
 }
 
-.select-wraper input:not([type='checkbox']) {
+.select input:not([type='checkbox']) {
     width: 30%;
     border: 1.3px solid rgba(0, 0, 0, 0.15);
     border-radius: 3px;
 }
 
-.select-wraper input:not([type='checkbox']):disabled {
+.select input:not([type='checkbox']):disabled {
     background: #E9ECEF;
 }
 
-.select-wraper input:not([type='checkbox']):enabled {
+.select input:not([type='checkbox']):enabled {
     outline: none;
     background: white;
     width: 30%;
     border: 1.3px solid rgba(0, 0, 0, 0.15);
 }
 
-.select-wraper input:not([type='checkbox']):focus {
+.select input:not([type='checkbox']):focus {
     box-shadow: 0px 0px 9px -2px #233B4A;
 }
 
-.select-wraper .check-wraper {
+.select .select__check_wraper {
     padding-left: 5.5rem;
     width: 84%;
     margin: auto;
@@ -198,7 +198,7 @@ label {
 
 /* Estilos para el tercer div (Fechas) */
 
-.date-wraper {
+.date {
     font-size: 1.4rem;
     margin: auto;
     width: 80%;
@@ -207,7 +207,7 @@ label {
     box-shadow: 0px 0px 15px 2px rgba(0, 0, 0, 0.15);
 }
 
-.date-wraper h3 {
+.date h3 {
     margin: 0;
 }
 
@@ -230,7 +230,7 @@ label {
     background: var(--clr-main) !important;
 }
 
-.txt-info {
+.informacion__txt {
     background: white;
     width: 90%;
     margin: .5em auto;
@@ -269,67 +269,67 @@ label {
         grid-template-rows: 1fr 1fr;
         gap: 0px 0px;
         grid-template-areas:
-            "info-wraper select-wraper"
-            "date-wraper date-wraper";
+            "info select"
+            "date date";
     }
 
     /* Estilos para el primer div (Información del curso) */
 
-    .info-wraper {
-        grid-area: info-wraper;
+    .info {
+        grid-area: info;
         min-height: 93.1ch;
         margin-bottom: 0;
         margin-right: 1em;
     }
 
-    .part {
+    .section__title {
         font-size: 2.3rem;
     }
 
-    .info-wraper .form-label {
+    .info .form-label {
         font-size: 2rem;
     }
 
-    .info-wraper .input {
+    .info .info__input {
         font-size: 1.5rem;
     }
 
     /* Estilos para el segundo div (Selección de días) */
 
-    .select-wraper {
+    .select {
         margin-bottom: 0rem;
         margin-left: 1em;
     }
 
-    .select-wraper h3 {
+    .select h3 {
         margin-bottom: 15px;
     }
 
-    .select-wraper label {
+    .select label {
         width: 50%;
     }
 
-    .select-wraper .label {
+    .select  .select__label {
         font-size: 2rem;
     }
 
-    .select-wraper .input-value {
+    .select .info__input-value {
         font-size: 1.4rem;
     }
 
-    .select-wraper .checkbox {
+    .select .select__checkbox {
         font-size: 2rem;
     }
 
-    .select-wraper .select-day-wraper {
+    .select .select__select_day {
         margin-bottom: .4em;
     }
 
-    .select-day-wraper .label {
+    .select__select_day  .select__label {
         margin-top: .5em;
     }
 
-    .select-day-wraper .dia {
+    .select__select_day .select__dia {
         height: 2rem;
     }
 
@@ -346,8 +346,8 @@ label {
 
     /* Estilos para el tercer div (Fechas) */
 
-    .date-wraper {
-        grid-area: date-wraper;
+    .date {
+        grid-area: date;
         width: 84%;
         min-height: 42rem;
         margin-top: 1em;
@@ -370,7 +370,7 @@ label {
 
     /* Estilos para el primer div (Información del curso) */
 
-    .info-wraper {
+    .info {
         min-height: 80%;
         margin-left: 3em;
         margin-top: 0;
@@ -378,15 +378,19 @@ label {
 
     /* Estilos para el segundo div (Selección de días) */
 
-    .select-wraper {
+    .select {
         min-height: 80%;
         margin-right: .8em;
         margin-top: 0;
     }
 
+    .tab {
+        margin-left: 1rem;
+    }
+
     /* Estilos para el tercer div (Fechas) */
 
-    .date-wraper {
+    .date {
         min-height: 80%;
         margin: 0 2.2em 0 .8em;
     }
@@ -398,3 +402,11 @@ label {
     background: #000;
 }
 
+/* Styles for super big screens */
+
+@media (min-width: 1400px) {
+    body {
+        display: grid;
+        place-content: center;
+    }
+}
